# py-holdem-hand-evaluator

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: evaluator_benchmark.rs
src/: bitmask_cards.rs  constants.rs  lib.rs  main.rs  montecarlo.rs
