[package]
name = "holdem_hand_evaluator"
version = "0.1.1"
edition = "2021"

[lib]
name = "holdem_hand_evaluator"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
holdem-hand-evaluator = { git = "https://github.com/b-inary/holdem-hand-evaluator" }

[dependencies.pyo3]
version = "0.19.0"
features = ["extension-module"]

[profile.release]
opt-level = 3
debug = false
panic = "abort"
lto = "fat"
codegen-units = 1